--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
     background-size: 100%;
     width: 100%;
     height: 100%;
-    background-image: url(ss3.svg);
+    background-image: url(svgs/ss3.svg);
 
     /*baggrundsbillede*/
     position: absolute;
@@ -40,7 +40,7 @@ body {
     background-size: 100%;
     width: 100%;
     height: 100%;
-    background-image: url(huller2.svg);
+    background-image: url(svgs/huller2.svg);
     position: absolute;
 }
 
@@ -57,7 +57,7 @@ body {
     position: absolute;
     width: 24.9rem;
     height: 18rem;
-    background-image: url(sol.svg);
+    background-image: url(svgs/sol.svg);
     top: 10vw;
     left: 1vw;
 }
@@ -68,7 +68,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(titel.svg);
+    background-image: url(svgs/titel.svg);
     /*baggrundsbillede*/
     background-size: 100%;
 
@@ -80,7 +80,7 @@ body {
     position: absolute;
     width: 30vw;
     height: 33.7vw;
-    background-image: url(knap.svg);
+    background-image: url(svgs/knap.svg);
     background-size: 100%;
     top: 19vw;
     left: 34.2vw;
@@ -91,7 +91,7 @@ body {
 #gameover {
     width: 100%;
     height: 100%;
-    background-image: url(taber.svg);
+    background-image: url(svgs/taber.svg);
     position: absolute;
     background-size: 100%;
 
@@ -100,7 +100,7 @@ body {
 #levelcomplete {
     width: 100%;
     height: 100%;
-    background-image: url(vinder.svg);
+    background-image: url(svgs/vinder.svg);
     position: absolute;
     background-size: 100%;
 
@@ -111,7 +111,7 @@ body {
     position: absolute;
     width: 9vw;
     height: 9vw;
-    background-image: url(tak.svg);
+    background-image: url(svgs/tak.svg);
     background-size: 100%;
     top: 0vw;
     right: 0vw;
@@ -130,7 +130,7 @@ body {
 .hest {
     width: 10vw;
     height: 12vw;
-    background-image: url(hest.svg);
+    background-image: url(svgs/hest.svg);
     background-size: 100%;
 }
 
@@ -139,7 +139,7 @@ body {
 .politi {
     width: 10vw;
     height: 12vw;
-    background-image: url(politi.svg);
+    background-image: url(svgs/politi.svg);
     background-size: 100%;
 
 }
@@ -273,7 +273,7 @@ body {
     position: absolute;
     width: 3.2vw;
     height: 4.2vw;
-    background-image: url(saek.svg);
+    background-image: url(svgs/saek.svg);
     background-size: 100%;
 }
 
@@ -290,7 +290,7 @@ body {
 .mistetliv {
     width: 3vw;
     height: 3.5vw;
-    background-image: url(hand.svg);
+    background-image: url(svgs/hand.svg);
     background-size: 100%;
 
 }
