--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ body {
     width: 100%;
     height: 100%;
     background-image: url(svgs/ss3.svg);
-
     /*baggrundsbillede*/
     position: absolute;
 }
@@ -130,7 +129,7 @@ body {
 .hest {
     width: 10vw;
     height: 12vw;
-    background-image: url(svgs/hest.svg);
+    background-image: url(svgs/sigurd.svg);
     background-size: 100%;
 }
 
@@ -269,6 +268,10 @@ body {
 
 }
 
+.hole {
+    
+  }
+
 .saek {
     position: absolute;
     width: 3.2vw;
@@ -380,11 +383,11 @@ body {
 
 
 .delay1 {
-    animation-delay: 1s;
+    animation-delay: 100s;
 }
 
 .delay2 {
-    animation-delay: 1.5s;
+    animation-delay: 100s;
 }
 
 
@@ -395,7 +398,7 @@ audio {
 
 .popup {
     animation-name: popup_kf;
-    animation-duration: 1.5s;
+    animation-duration: 2.5s;
     animation-iteration-count: infinite;
     animation-fill-mode: both;
 
