--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ html {
     font-size: 100%;
     background-color: #EAEAEA;
     overflow: hidden;
+    user-select: none;
 }
 
 body {
@@ -11,6 +12,7 @@ body {
     padding: 0;
     font-family: 'Finger Paint', cursive;
     width: 100%;
+    overflow: hidden;
 }
 
 #blackout_text{
@@ -78,7 +80,7 @@ body {
 
 #start {
     position: absolute;
-    top: -4%;
+    top: 0%;
     left: -14%;
     width: 100%;
     height: 100%;
@@ -201,6 +203,7 @@ body {
     background-image: url();
     background-size: 100%;
     z-index: 3;
+    /* background-color: red; */
 }
 
 /*POLITI*/
@@ -211,6 +214,7 @@ body {
     background-image: url(svgs/kaptajn_hoved.svg);
     background-size: 100%;
     z-index: 3;
+    /* background-color: blue; */
 }
 
 .ingenting {
@@ -230,6 +234,7 @@ body {
     height: 12vw;
     overflow: hidden;
     z-index: 3;
+    /* background-color: green; */
 }
 
 
@@ -240,6 +245,7 @@ body {
     height: 12vw;
     overflow: hidden;
     z-index: 3;
+    /* background-color: green; */
 }
 
 
@@ -250,6 +256,7 @@ body {
     width: 10vw;
     height: 12vw;
     z-index: 3;
+    /* background-color: green; */
 }
 
 
@@ -261,6 +268,7 @@ body {
     height: 12vw;
     background-size: 100%;
     z-index: 3;
+    /* background-color: green; */
 }
 
 
@@ -271,6 +279,7 @@ body {
     height: 12vw;
     background-size: 100%;
     z-index: 3;
+    /* background-color: green; */
 }
 
 
@@ -282,6 +291,7 @@ body {
     height: 12vw;
     background-size: 100%;
     z-index: 3;
+    /* background-color: green; */
 }
 
 
@@ -378,7 +388,77 @@ body {
 
 #time_board {}
 
+.plus1{
+    width: 20vw;
+    height: 3vw;
+    background-image: url(images/1plus.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: absolute;
+    left: 25.5vw;
+    top: 24.5vw;
+    z-index: 3;
+}
 
+.plus2{
+    width: 20vw;
+    height: 3vw;
+    background-image: url(images/1plus.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: absolute;
+    left: 68.5vw;
+    top: 24.5vw;
+    z-index: 3;
+}
+
+.plus3{
+    width: 20vw;
+    height: 3vw;
+    background-image: url(images/1plus.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: absolute;
+    left: 34.5vw;
+    top: 5.5vw;
+    z-index: 3;
+}
+
+.minus1{
+    width: 20vw;
+    height: 3vw;
+    background-image: url(images/1minus.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: absolute;
+    left: 47.5vw;
+    top: 25.5vw;
+    z-index: 3;
+}
+
+.minus2{
+    width: 20vw;
+    height: 3vw;
+    background-image: url(images/1minus.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: absolute;
+    left: 59vw;
+    top: 6.5vw;
+    z-index: 3;
+}
+
+.minus3{
+    width: 20vw;
+    height: 3vw;
+    background-image: url(images/1minus.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: absolute;
+    left: 80.5vw;
+    top: 7.5vw;
+    z-index: 3;
+}
 
 .sol {
     animation-name: sol_kf;
@@ -460,7 +540,7 @@ body {
 
 
 .delay1 {
-    animation-delay: 1.7s;
+    animation-delay: 2.01s;
 }
 
 .delay2 {
@@ -476,7 +556,7 @@ audio {
 
 .popup {
     animation-name: popup_kf;
-    animation-duration: 2s;
+    animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-fill-mode: both;
 
@@ -501,7 +581,7 @@ audio {
 
 .forsvind {
     animation-name: forsvind_kf;
-    animation-duration: .5s;
+    animation-duration: 0.5s;
     animation-iteration-count: 1;
     animation-timing-function: cubic-bezier(.59, -0.56, .77, 1.34);
     animation-fill-mode: forwards;
@@ -533,7 +613,7 @@ audio {
 }
 
 .grey {
-    filter: grayscale(80%);
+    background-image: url(images/krydshat.png);
 }
 
 .paused {
@@ -543,6 +623,10 @@ audio {
 .hide {
     display: none;
     /* Eller evt. visibility: none;*/
+}
+
+.visible{
+    display: block;
 }
 
 /* POSITIONER */
@@ -598,12 +682,13 @@ audio {
         display: none;
     }
     #blackout {
-        background-color: #9C7B58;
+        background-color: #161615;
         width: 100vw;
         height: 100vh;
         z-index: 100;
     }
     #blackout_text{
+        color: white;
         display: block;
         position: absolute;
         font-size: large;
