--- a/styles.css
+++ b/styles.css
@@ -677,7 +677,7 @@ audio {
     right: 27vw;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (orientation : portrait) {
     #screen *{
         display: none;
     }
